--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>jQuery Plugins Overview</title>
+    <link rel="stylesheet" href="plugins/magnific-popup/magnific-popup.css">
     <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
 
+<section id="mgp">
+    <div class="parent-container">
+        <a href="images/img_forest.jpg"></a>
+        <a href="images/pexels-photo.jpg"></a>
+        <a href="images/pexels-photo-248797.jpeg"></a>
+    </div>
+</section>
+
+<section id="ltr"></section>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+<script src="plugins/jquery-magnific-popup.js"></script>
 <script src="dist/script.js"></script>
 </body>
 </html>
