--- a/index.html
+++ b/index.html
@@ -16,10 +16,32 @@
     </div>
 </section>
 
-<section id="ltr"></section>
+<section id="ltr">
+    <h1 class="fancy_title">Some Title</h1>
+</section>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-<script src="plugins/jquery-magnific-popup.js"></script>
+<section class="plugin" id="magnific-popup">
+    <h2 class="plugin__title">Magnific Popup</h2>
+    <div class="plugin__wrapper js-magnific-popup">
+        <a class="popup-images" href="images/pexels-photo-1207978.jpeg">1</a>
+        <a class="popup-images" href="images/pexels-photo-1579926.jpeg">2</a>
+        <a class="popup-images" href="images/pexels-photo-607292.jpeg">3</a>
+    </div>
+</section>
+
+
+<section class="plugin">
+    <h2 class="plugin__title"><a href="" target="_blank"></a></h2>
+    <div class="plugin__wrapper"></div>
+</section>
+
+<section class="plugin" id="lettering">
+    <h2 class="plugin__title"><a href=""></a>Lettering</h2>
+    <div class="plugin__wrapper js-lettering"></div>
+</section>
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+<script src="plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
 <script src="dist/script.js"></script>
 </body>
 </html>
